syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.telegraft.statemachine.proto";

package telegraft;

service TelegraftStateMachineService {

    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
    rpc CreateChat (CreateChatRequest) returns (CreateChatResponse) {}
    rpc JoinChat (JoinChatRequest) returns (JoinChatResponse) {}
    rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse) {}

}

message CreateUserRequest {
  string username = 1;
}

message CreateUserResponse {
  bool ok = 1;
}

message SendMessageRequest {
  string sender = 1;
  int64 receiver = 2;
  string content = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message SendMessageResponse {
  bool ok = 1;
  string sender = 2;
  int64 receiver = 3;
}

message CreateChatRequest {
  string user = 1;
  string chatName = 2;
  string chatDescription = 3;
}

message CreateChatResponse {
  bool ok = 1;
  int64 chatId = 2;
}

message JoinChatRequest {
  string userToAdd = 1;
  int64 chatId = 2;
}

message JoinChatResponse {
  bool ok = 1;
  string userToAdd = 2;
  int64 chatId = 3;
}

message GetMessagesRequest {
  string user = 1;
  google.protobuf.Timestamp messagesAfter = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  string sender = 1;
  int64 chatId = 2;
  string content = 3;
  google.protobuf.Timestamp sentTime = 4;
}
